fixing overflow bug

--- a/css/common.css
+++ b/css/common.css
@@ -29,6 +29,7 @@
 
 html {
     width: 100%;
+    height: 100%;
     overflow-x: hidden;
 }
 
@@ -37,8 +38,8 @@ html {
 body {
     margin: 0px;
     padding: 0px;
-    position: relative;
     min-width: fit-content;
+    height: 100%;
     overflow-x: hidden;
 }
 
